Product and ProductPrice done

--- a/Frontend/src/app/features/invoice/invoice.html
+++ b/Frontend/src/app/features/invoice/invoice.html
@@ -69,7 +69,7 @@
                         <td>{{ detail.quantity }}</td>
                         <td>{{ detail.rate }}</td>
                         <td>{{ detail.subTotal }}</td>
-                        <td>{{ detail.total }}</td>
+                        <td>{{ detail.tax }}</td>
                         <td>{{ detail.grandTotal }}</td>
                     </tr>
                 </tbody>
